// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inferType correctly infers the "BASIC_LIVE_OBJECT" schema 1`] = `
"type Storage {
  fills: LiveObject<Fill>
  strokes: LiveObject<Stroke>
}

type Fill {
  mesh: String
  sole: String
  stripes: String
  laces: String
}

type Stroke {
  mesh: String
  sole: String
  laces: String
}"
`;

exports[`inferType correctly infers the "BASIC_MERGE" schema 1`] = `
"type Storage {
  fills: LiveObject<Fill>
  strokes: LiveObject<Stroke>
}

type Fill {
  mesh: Mesh
  sole: String
  stripes: String
  laces: String
}

type Stroke {
  mesh: Mesh
  sole: String
  laces: String
}

type Mesh {
  b?: Int
  a?: Int
}"
`;

exports[`inferType correctly infers the "BASIC_UNMERGEABLE" schema 1`] = `
"type Storage {
  fills: LiveObject<Fill>
  strokes: LiveObject<Stroke>
}

type Fill {
  mesh: Mesh
  sole: String
  stripes: String
  laces: String
}

type Mesh {
  a: Int
}

type Stroke {
  mesh: StrokeMesh
  sole: String
  laces: String
}

type StrokeMesh {
  a: String
}"
`;

exports[`inferType correctly infers the "EMPTY" schema 1`] = `
"type Storage {
}"
`;
